feat: draw technical patterns on kline charts
